Play with margins/padding

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         Bienvenue sur mon site
     </p>
 
-    <div class="bg-primary w-25 h-50"></div>
-    <div class="bg-success vw-25"></div>
+<!--    définit la taille en %-->
+<!--    <div class="bg-primary w-25 h-50"></div>-->
+<!--    <div class="bg-success vw-25"></div>-->
+
+<!--    set la marge à 0 sur l'axe X, possibilité d'aller jusque 5 -->
+    <div class="bg-primary mx-0"></div>
+<!--    pt-3 : padding top 3-->
+<!--    pb-4 : padding bottom 3-->
+<!--    px-2 : padding gauche + droite 2-->
+    <div class="bg-primary mx-5 pt-3 pb-4 px-2 text-white">
+        Hello World
+    </div>
+</body>
 </html>
