--- a/doc.html
+++ b/doc.html
@@ -53,7 +53,16 @@ Gérer les dimensions
 <div class="min-vw-100"></div>
 
 
-
+Breakpoints
+<!-- Aide à faire un design responsive -->
+<!--
+    xs : 0 - 576 px
+    sm : >= 576 px
+    md : >= 768 px
+    lg : >= 992 px
+    xl : >= 1200 px
+    xxl : >= 1400 px
+-->
 
 
 </body>
