--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-dark">
     <p class="text-white">
-        Bienvenue sur mon site
+        Hello World
     </p>
 
 <!--    définit la taille en %-->
@@ -21,7 +21,9 @@
 <!--    pt-3 : padding top 3-->
 <!--    pb-4 : padding bottom 3-->
 <!--    px-2 : padding gauche + droite 2-->
-    <div class="bg-primary mx-5 pt-3 pb-4 px-2 text-white">
+<!--    text- start / center / end-->
+<!--    applique text-md-end tant que la taille est > à 768px, sinon text-start -->
+    <div class="bg-primary mx-5 pt-3 pb-4 px-2 text-white text-md-end text-start">
         Hello World
     </div>
 </body>
