--- a/index.html
+++ b/index.html
@@ -17,14 +17,26 @@
 <!--    <div class="bg-success vw-25"></div>-->
 
 <!--    set la marge à 0 sur l'axe X, possibilité d'aller jusque 5 -->
-    <div class="bg-primary mx-0"></div>
+<!--    <div class="bg-primary mx-0"></div>-->
 <!--    pt-3 : padding top 3-->
 <!--    pb-4 : padding bottom 3-->
 <!--    px-2 : padding gauche + droite 2-->
 <!--    text- start / center / end-->
 <!--    applique text-md-end tant que la taille est > à 768px, sinon text-start -->
-    <div class="bg-primary mx-5 pt-3 pb-4 px-2 text-white text-md-end text-start">
+<!--    <div class="bg-primary mx-5 pt-3 pb-4 px-2 text-white text-md-end text-start">-->
+<!--        Hello World-->
+<!--    </div>-->
+
+<!--    text-uppercase -->
+<!--    text-lowercase -->
+<!--    text-capitalize (maj sur chaque 1ère lettre de chaque mot -->
+    <div class="bg-primary mx-5 p-3 text-white text-uppercase">
         Hello World
     </div>
+
+<!--    text-decoration-none -->
+<!--    text-decoration-underline -->
+<!--    text-decoration-line-through -->
+    <a href="#" class="text-white text-decoration-none">Accueil</a>
 </body>
 </html>
