--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-dark">
     <p class="text-white">
-        Hello World
+        Hello <span class="fw-bold">World</span>
     </p>
 
 <!--    définit la taille en %-->
