--- a/doc.html
+++ b/doc.html
@@ -197,5 +197,114 @@ Permettre la sélection
 <p class="user-select-auto">Le paragraphe a un comportement normal.</p>
 <p class="user-select-none">Le paragraphe n'est pas sélectionnable.</p>
 
+
+
+Les tableaux
+
+Initialiser un tableau
+
+<table class="table">
+    ...
+</table>
+
+
+Mettre en couleur
+
+<!-- Sur le tableau -->
+<table class="table-primary">...</table>
+<table class="table-secondary">...</table>
+<table class="table-success">...</table>
+<table class="table-danger">...</table>
+<table class="table-warning">...</table>
+<table class="table-info">...</table>
+<table class="table-light">...</table>
+<table class="table-dark">...</table>
+
+<!-- Sur des lignes -->
+<tr class="table-primary">...</tr>
+<tr class="table-secondary">...</tr>
+<tr class="table-success">...</tr>
+<tr class="table-danger">...</tr>
+<tr class="table-warning">...</tr>
+<tr class="table-info">...</tr>
+<tr class="table-light">...</tr>
+<tr class="table-dark">...</tr>
+
+<!-- Sur des cellules (`td` ou `th`) -->
+<tr>
+    <td class="table-primary">...</td>
+    <td class="table-secondary">...</td>
+    <td class="table-success">...</td>
+    <td class="table-danger">...</td>
+    <td class="table-warning">...</td>
+    <td class="table-info">...</td>
+    <td class="table-light">...</td>
+    <td class="table-dark">...</td>
+</tr>
+
+
+Dissocier les lignes
+
+<table class="table table-striped table-hover">
+    ...
+</table>
+
+<!-- Et pour mettre en valeur :  -->
+<tr>
+    <td class="table-active">Anabelle</td>
+    <td>Dupont</td>
+    <td>45 ans</td>
+</tr>
+
+
+Gérer les bordures
+
+<table class="table table-bordered border-primary">
+
+</table>
+
+<!-- Pour retirer les bordures -->
+<table class="table table-borderless">
+
+    </div>
+
+
+    Faire de petits tableaux
+
+    <table class="table table-sm">
+        ...
+    </table>
+
+
+    Aligner verticalement les items
+
+    Il suffit d'utiliser la classe align-middle ou align-bottom sur la ligne ou sur la cellule du tableau.
+
+
+    Faire un tableau totalement responsive
+
+    <table class="table table-responsive">
+
+    </table>
+
+    <!-- En utilisant les breakpoints -->
+    <table class="table table-responsive-lg">
+
+    </table>
+
+
+    Ajouter une description
+
+    <table class="table">
+        <caption>Description</caption>
+        ...
+    </table>
+
+    <!-- Et si on veut mettre la description au-dessus du tableau -->
+    <table class="table caption-top">
+        <caption>Description</caption>
+        ...
+    </table>
+
 </body>
 </html>
