--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/default.css">
     <title>Site Bootstrap 5</title>
 </head>
-<body class="bg-dark">
+<body class="p-3">
     <p class="text-white">
         Hello <span class="fw-bold">World</span>
     </p>
@@ -38,5 +38,54 @@
 <!--    text-decoration-underline -->
 <!--    text-decoration-line-through -->
     <a href="#" class="text-white text-decoration-none">Accueil</a>
+
+<!--    rend le tableau responsive -->
+    <div class="table-responsive">
+        <!--    table-striped : permet d'avoir des lignes de couleurs différentes -->
+        <!--    table-hover : met en surbrillance la ligne où se trouve le curseur -->
+        <!--    table-bordered : met des bordures -->
+        <!--    border-primary : couleur des bordures -->
+        <!--    border-sm : réduit la taille du tableau -->
+        <!--    caption-top : met la légende au-dessus -->
+        <table class="mt-3 table table-striped table-hover table-bordered border-primary table-sm caption-top">
+<!--            définit une légende-->
+            <caption class="text-center">Liste de personnes</caption>
+
+            <thead>
+                <tr class="table-primary">
+                    <th>Prénom</th>
+                    <th>Nom</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Mark</td>
+                    <td>Dupont</td>
+                    <td>45</td>
+                </tr>
+
+                <tr>
+                    <td class="table-dark">Louis</td>
+                    <td class="table-active">Dudu</td>
+                    <td>22</td>
+                </tr>
+
+                <tr>
+        <!--            align-middle : aligne verticalement-->
+                    <td class="align-middle">Duco</td>
+                    <td>mt-3 table table-striped table-hover</td>
+                    <td>41</td>
+                </tr>
+
+                <tr>
+                    <td>Cou</td>
+                    <td>Lou</td>
+                    <td>99</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
